syntax = "proto3";

package event;

message Status{
    string device_ID= 1;
    string device_name =2;
    bool status=3;
    uint64 occurred_time = 4;
    string description = 5;
}
enum EventTopic{
    DeviceEventTopic = 0;
    OriginalEventTopic=1;
}
enum StatusTopic{
    DeviceStatusTopic = 0;
    //ONVIFIPCStatusTopic = 1;
    //NVR7128StatusTopic = 2;
    OriginalStatusTopic=2;
}

enum AlarmTopic{
    DeviceAlarmTopic = 0;
    //ONVIFIPCAlarmTopic = 1;
    //NVR7128AlarmTopic = 2;
    DeviceAlarmClearTopic=3;
    OriginalAlarmTopic=4;
}
message Alarm{
    enum AlarmType{
        NotEvent = 0;
        DeviceHeartbeat = 1;
        DeviceTriggerDigitalInput = 2;
        DeviceTriggerDigitalRelay = 3;
        VideoSourceMotionAlarm = 4;
        VideoSourceSignalLoss = 5;
        VideoSourceShading = 6;
        VideoSourceImageTooBrightAnalyticsService = 7;
        VideoSourceImageTooBrightImagingService = 8;
        VideoSourceImageTooBrightRecordingService = 9;
        RuleEngineLineDetectorCrossed = 10;
        RuleEngineFieldDetectorObjectsInside = 11;
        RuleEngineFieldDetectorObjectsOutside = 12;
        RuleEngineFieldDetectorObjectsInsideOrOutside = 13;
        RuleEngineFieldDetectorObjectsLoitering = 14;
        RuleEngineObjectDetectorToken = 15;
        RuleEngineObjectDetectorLeave = 16;
        RuleEngineObjectDetectorObjectsTokenOrLeave = 17;
        RuleEngineCountAggregationCounter = 18;
        RuleEngineFireDetector = 19;
        RuleEnginePlateDetector = 20;
        RuleEngineFaceAnalysisFaceDetector = 21;
        RuleEngineCellMotionDetectorMotion = 22;
        MonitoringProfileActiveConnections = 25;
        EventMotionAlarm = 26;
        VideoMask=27;
        VideoLoss=28;
        CrossingLine=29;
        PerimeterDefender=30;
        AudioDetection=31;
        IntrusionTrace=32;
        SDCardFailure=33;
        SDCardOverflow=34;
        SDCardFull=35;
        AlarmInput=36;
        AlarmOutput=37;
        RecordLost=38;//录像丢失
        ResourceUsage=39;//资源使用率告警
        RecordException=40;//录像异常
        VolumCapacityIsTooLow=41;//ipsan卷容量过低
    }
    AlarmType alarm_type = 1;
    string device_ID= 2;
    string device_name =3;
    uint64 start_time = 4;
    uint64 end_time = 5;
    string detail = 6;
}

message Event {
    enum EventType{
        MediaProfileChanged = 0;
        MediaConfigurationChanged = 1;
    }
    EventType event_type = 1;
    string device_ID= 2;
    string device_name =3;
    uint64 occurred_time = 4;
    string detail = 6;
}

message AlarmClear{
    string device_id=1;
    int64 time = 2;
}