syntax = "proto3";
import "Protos/google/api/annotations.proto";
option csharp_namespace = "GB28181.Service.Protos.Video";

option objc_class_prefix = "ms";

package MediaContract;

// The Video Control service definition.
service VideoSession {
  //LivePlay
  rpc StartLive (StartLiveRequest) returns (StartLiveReply) {
    option (google.api.http) = {
      post: "/v1/VideoSession/StartLive"
      body: "*"
    };
  }
  //Playback
  rpc StartPlayback (StartPlaybackRequest) returns (StartPlaybackReply) {
    option (google.api.http) = {
      post: "/v1/VideoSession/StartPlayback"
      body: "*"
    };
  }
  //Stop Video
  rpc Stop (StopRequest) returns (StopReply) {
    option (google.api.http) = {
      post: "/v1/VideoSession/Stop"
      body: "*"
    };
  }
  //PlaybackControl
  rpc PlaybackControl (PlaybackControlRequest) returns (PlaybackControlReply) {
    option (google.api.http) = {
      post: "/v1/VideoSession/PlaybackControl"
      body: "*"
    };
  }

  //keepalive between two point
  rpc KeepAlive (KeepAliveRequest) returns (KeepAliveReply) {
    option (google.api.http) = {
      post: "/v1/VideoSession/KeepAlive"
      body: "*"
    };
  }
}

enum BusinessType {
	BT_LIVEPLAY = 0;
	BT_PLAYBACK = 1;
	BT_DOWNLOAD = 2;
	BT_MAX = 3;
}

enum TransportProtocol {
	TCP = 0;
	UDP = 1;
	MAX = 2;
}

message Header {
	string Version = 1;
    int32 sequence = 2;
	string sessionid = 3;
}

message Status {
    int32 code = 1;
    string msg = 2;
}

message StartLiveRequest {
	Header hdr =1;
	TransportProtocol trans_proto = 2;
	string gbid = 3;
	string ipaddr = 4;
	int32 port = 5;
}
message StartLiveReply {
	Header hdr = 1;
	Status status = 2;
	string ipaddr = 3;
	int32 port = 4;
}

message StartPlaybackRequest {
	Header hdr =1;
	TransportProtocol trans_proto = 2;
	int32 port = 3;
	string ipaddr = 4;
	string gbid = 5;
	string begin_time = 7;
	string end_time = 8;
}
message StartPlaybackReply {
	Header hdr = 1;
	Status status = 2;
	string ipaddr = 3;
	int32 port = 4;
}

message StopRequest {
	Header hdr =1;
	string gbid = 2;
	BusinessType business_type =3;
}
message StopReply {
	Header hdr = 1;
	Status status = 2;
}

message KeepAliveRequest {
	Header hdr = 1;
	string gbid = 2;
}
message KeepAliveReply {
	Header hdr = 1;
	Status status = 2;
}

enum PlaybackControlType {
	Pause = 0;
	Resume = 1;
	Moveto = 2;
	Scale = 3;
}
message PlaybackControlRequest {
	Header hdr =1;
	string gbid = 2;
	PlaybackControlType playback_type = 3;
	float scale = 4;
	int64 start_time = 5;
}
message PlaybackControlReply {
	Header hdr = 1;
	Status status = 2;
}